# dqueue

./: README.md
backend/: .dockerignore  Dockerfile  codebook.toml  docker-compose.yml  pyproject.toml  render.yml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 46861e33d743_intial_migration.py  8a4e05469be1_remove_file_metada_field_of_jon_model.py  9bdf0ddfb761_initial_migration.py  b134372a5d4c_add_field_in_job_model.py
backend/app/: main.py
backend/app/api/: deps.py  job.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/imagekitio/: imagekit.py
backend/app/models/: __init__.py  job.py
backend/app/queue/: redis_queue.py
backend/app/schemas/: job.py
backend/app/services/: job.py
backend/app/tasks/: __init__.py  email_sender.py  image_optimizer.py  pdf_merger.py  qrcode_generator.py  registry.py  string_processor.py
backend/app/worker_logic/: exception.py  executor.py
backend/worker/: main.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/api/: client.js  jobs.js
frontend/src/components/: create_task.jsx  error_popup.jsx  errors.jsx  header.jsx  pagination.jsx  result_popup.jsx  stats.jsx  tasks.jsx
frontend/src/components/payload_comps/: image_optimize.jsx  merge_pdf.jsx  qrcode_generate.jsx  send_email.jsx  string_process.jsx
