[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-mail>=1.6.2",
    "fastapi-pagination>=0.15.12",
    "httpx>=0.28.1",
    "imagekitio[aiohttp]>=5.4.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-multipart>=0.0.27",
    "qrcode>=8.2",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
]
