[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "fastapi-mail>=1.6.2",
    "fastapi-pagination>=0.15.12",
    "httpx>=0.28.1",
    "imagekitio[aiohttp]>=5.4.0",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.27",
    "qrcode>=8.2",
    "redis>=7.4.0",
    "resend>=2.30.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "sqlalchemy-utils>=0.42.1",
    "uvicorn>=0.46.0",
]
